[tool.poetry]
name = "pytest-httptesting"
version = "0.9.0"
description = "http_testing framework on top of pytest"
authors = ["HE Qile <mr.qile@gmail.com>"]
readme = "README.md"
packages = [
    {include = "http_testing"},
    {include = "http_testing/py.typed"},
]

homepage = "https://github.com/heqile/http_testing"
repository = "https://github.com/heqile/http_testing"

include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.2.0"
httpx = "^0.27.0"
attrs = "^24.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"
mypy = "^1.1.1"
black = "^24.4.2"
ruff = "^0.5.5"
respx = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."pytest11"]
"http_page_checker" = "http_testing.plugin"

[tool.ruff]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
